Bug 340900 - Can't load plugins if compiled with -DKDE_INSTALL_USE_QT_SYS_PATHS
Summary: Can't load plugins if compiled with -DKDE_INSTALL_USE_QT_SYS_PATHS
Status: RESOLVED FIXED
Alias: None
Product: kactivitymanagerd
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Ivan Čukić
URL:
Keywords:
: 340314 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-11-12 18:22 UTC by Antonio Rojas
Modified: 2014-11-14 00:10 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.5.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Rojas 2014-11-12 18:22:23 UTC
This is similar to bug 339539. If kactivities is compiled with the -DKDE_INSTALL_USE_QT_SYS_PATHS flag instead of explicitely specifying QT_PLUGIN_DIR, the resulting package can't find its plugins. It works correctly if the QT_PLUGIN_DIR variable is explicitely set (even thouth the plugins are installed to the exact same dir)

Reproducible: Always

Steps to Reproduce:
1. Compile kactivities with the -DKDE_INSTALL_USE_QT_SYS_PATHS=ON flag instead of specifying -DQT_PLUGIN_DIR
2. kactivitymanagerd start

Actual Results:  
org.kde.kactivities.application: [ FAILED ] loading:  "Aprovisionamiento de Sqlite" "The shared library was not found."
org.kde.kactivities.application: [ FAILED ] loading:  "Compartir-Me gusta-Conectar" "The shared library was not found."
org.kde.kactivities.application: [ FAILED ] loading:  "Accesos rápidos de teclado globales" "The shared library was not found."                                                                                                                           
org.kde.kactivities.application: [ FAILED ] loading:  "Plantillas de actividades" "The shared library was not found."        

Expected Results:  
org.kde.kactivities.application: [   OK   ] loaded:   "Aprovisionamiento de Sqlite"
org.kde.kactivities.application: [   OK   ] loaded:   "Compartir-Me gusta-Conectar"
org.kde.kactivities.application: [   OK   ] loaded:   "Accesos rápidos de teclado globales"
org.kde.kactivities.application: [   OK   ] loaded:   "Plantillas de actividades"
Comment 1 Antonio Rojas 2014-11-12 18:24:24 UTC
s/DQT_PLUGIN_DIR/DQT_PLUGIN_INSTALL_DIR/
Comment 2 Andrea Scarpino 2014-11-12 19:50:28 UTC
*** Bug 340314 has been marked as a duplicate of this bug. ***
Comment 3 Hrvoje Senjan 2014-11-12 20:11:25 UTC
Git commit c5fa3e8f692de3d77a0b96f9f70ca625a3ff6542 by Hrvoje Senjan.
Committed on 12/11/2014 at 20:09.
Pushed by hrvojes into branch 'master'.

Use CMAKE_INSTALL_FULL_PLUGINDIR

this unbreaks plugin loading with KDE_INSTALL_USE_QT_SYS_PATHS ON

REVIEW: 121109
FIXED-IN: 5.5.0

M  +1    -1    src/CMakeLists.txt
M  +1    -1    src/service/Application.cpp

http://commits.kde.org/kactivities/c5fa3e8f692de3d77a0b96f9f70ca625a3ff6542