Use CMAKE_INSTALL_FULL_PLUGINDIR

this unbreaks plugin loading with KDE_INSTALL_USE_QT_SYS_PATHS ON

REVIEW: 121109
BUG: 340900
FIXED-IN: 5.5.0